final tweak after capstone presentation, fruit and veggie boxes spacing was off, corrected

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -275,7 +275,7 @@
   display: inline-block;
   width: 200px;
   color: #E2A315;
-  margin-left: 5%;
+  margin-left: 3%;
 }
 
 .checkbox {
@@ -298,7 +298,7 @@
   display: inline-block;
   width: 200px;
   color: #37AB26;
-  margin-left: 5%;
+  margin-left: 3%;
 }
 
 .vegetable-list {
